# alpaca-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
examples/mean-reversion/: Cargo.toml
examples/mean-reversion/src/: main.rs
src/: api.rs  lib.rs  model.rs  pagination.rs
src/api/: broker.rs  market_data.rs  trading.rs
src/api/broker/: accounts.rs  funding.rs  trading.rs
src/api/market_data/: live.rs  stock.rs
src/api/trading/: orders.rs  positions.rs
src/model/: broker.rs  trading.rs
