[package]
name = "alpaca-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
chrono = { version = "0.4.31", features = ["serde"] }
miette = "5.10.0"
paste = "1.0.14"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = "1.0.108"
serde_with = { version = "3.4.0", features = ["chrono"] }
thiserror = "1.0.50"
derive_more = "0.99"
